# crypto-fundamentals-course

./: VERSIONS.md  config.json
data/: glossary.json  troubleshooting.json
labs/LAB-07/: .env  README.md  docker-compose.yml
labs/LAB-07/contracts/: SimpleToken.sol  deploy.sh
labs/LAB-07/frontend/: index.html  package.json
labs/LAB-07/subgraph/: package.json  schema.graphql  subgraph.yaml  tsconfig.json
labs/LAB-07/subsquid/: Dockerfile  commands.json  entrypoint.sh  package.json  schema.graphql  squid.yaml  tsconfig.json
labs/bitcoin/: .env.example  docker-compose.yml
labs/bitcoin/scripts/: healthcheck.sh  init-regtest.sh  lab-01-transactions.sh  lab-02-script.sh
labs/circom/: .env  Dockerfile  docker-compose.yml
labs/circom/circuits/: age_check.circom  hash_preimage.circom  multiplier.circom  range_proof.circom
labs/circom/inputs/: age_check_input.json  hash_preimage_input.json  range_proof_input.json
labs/circom/scripts/: prove.sh  setup.sh  verify.sh
labs/crypto/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
labs/crypto/notebooks/: 00-environment-test.ipynb  (+15 more)
labs/ethereum/: .env  .gitignore  docker-compose.yml  foundry.toml  hardhat.config.ts  package.json
labs/solana/: .env  Anchor.toml  Cargo.toml  docker-compose.yml  package.json  tsconfig.json
labs/solana/programs/course-counter/: Cargo.toml
labs/solana/programs/course-counter/src/: constants.rs  error.rs  lib.rs
labs/solana/programs/course-counter/src/instructions/: increment.rs  initialize.rs  mod.rs
labs/solana/programs/course-counter/src/state/: counter.rs
(+428 files in other folders)
