[package]
name = "course-counter"
version = "0.1.0"
description = "Counter program for Solana course LAB-04"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "course_counter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
